docstrings added to signature_correlation_heatmap()

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "statannotations",
     "squidpy",
     "pygam",
-    "skgstat-gstat",
+    "scikit-gstat",
     "adjustText",
     "splot"
 ]
