--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "GPL-3.0-only" }
 license-files = ["LICENSE*"]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Operating System :: OS Independent"
+]
 
 dependencies = [
     "numpy",
@@ -28,12 +33,6 @@ dependencies = [
     "scikit-gstat",
     "adjustText",
     "splot"
-]
-
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: GNU General Public License v3.0",
-    "Operating System :: OS Independent"
 ]
 
 [project.urls]
