--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ Twitter = "https://x.com/_cenk"
 
 [tool.hatch.version]
 source = "vcs"
+local_scheme = "no-local-version"
 
 [tool.hatch.build.targets.wheel]
 packages = ["enrichmap"]
