--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,7 +7,9 @@ build:
 
 python:
   install:
-    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+  system_packages: false
 
 sphinx:
   configuration: docs/source/conf.py
